--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     </div>
 
     <div class="clients-div" id="clients">
-        <h2 class="capitalise center mb-5" style="color: #fff;">what our clients say</h2>
+        <h2 class="capitalise center mb-5">what our clients say</h2>
         <div id="carouselExample" class="carousel slide" data-bs-ride="carousel" data-bs-interval="5000">
             <div class="carousel-inner">
                 <div class="carousel-item active">
