--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </div>
             </div>
             <div class="about-us-info">
-                <h2>About Us</h2>
+                <h2 style="color: #FBDDD5;">About Us</h2>
                 <p>We believe that our Interior designs hoped to reflect our clients needs and preferences, we leads you a vision with our perspective and lifestyle for best minimal strive to fully understood our clients needs and apply their feedback and ideas into our designs. we do however, use our ability to ensure that to start with our best and ends with as professional as possible. we do provide advanced technologies.</p>
             </div>
         </div>
