--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,600&display=swap" rel="stylesheet">    <script src="https://kit.fontawesome.com/c9d52e2cdd.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,600&display=swap"
+        rel="stylesheet">
+    <script src="https://kit.fontawesome.com/61e33f66b4.js" crossorigin="anonymous"></script>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
 </head>
 
 <body>
@@ -52,6 +55,28 @@
             </div>
         </div>
     </nav>
+
+    <i onclick="openForm()" onmouseover="addEffect(this)" onmouseout="removeEffect(this)" class="fa-brands fa-facebook-messenger open-button"></i>
+    <div class="email-div" id="message-div">
+        <button onclick="closeForm()" type="button" class="btn-close" aria-label="Close"></button>
+        <h4 class="pb-4">Send us a message now</h4>
+        <form id="message-form">
+            <div class="mb-3">
+                <label for="exampleFormControlTextarea1" class="form-label">Your Name</label>
+                <input class="form-control" name="name" type="text">
+            </div>
+            <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">Your Email</label>
+                <input type="email" class="form-control" name="email" id="exampleInputEmail1" aria-describedby="emailHelp">
+            </div>
+            <div class="mb-3">
+                <label for="exampleFormControlTextarea1" class="form-label">Your Message</label>
+                <textarea class="form-control" name="message" id="exampleFormControlTextarea1" rows="3"></textarea>
+            </div>
+            <button type="submit" onclick="sendEmail(event)" class="btn btn-primary">Submit</button>
+        </form>
+    </div>
+
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" data-bs-interval="5000">
 
         <!-- <div class="carousel-indicators">
@@ -82,12 +107,16 @@
             <div id="carouselExampleSlidesOnly" class="carousel slide about" data-bs-ride="carousel"
                 data-bs-interval="3000">
                 <div class="about-c carousel-inner">
-                    
+
                 </div>
             </div>
             <div class="about-us-info">
                 <h2 style="color: #FBDDD5;">About Us</h2>
-                <p>We believe that our Interior designs hoped to reflect our clients needs and preferences, we leads you a vision with our perspective and lifestyle for best minimal strive to fully understood our clients needs and apply their feedback and ideas into our designs. we do however, use our ability to ensure that to start with our best and ends with as professional as possible. we do provide advanced technologies.</p>
+                <p>We believe that our Interior designs hoped to reflect our clients needs and preferences, we leads you
+                    a vision with our perspective and lifestyle for best minimal strive to fully understood our clients
+                    needs and apply their feedback and ideas into our designs. we do however, use our ability to ensure
+                    that to start with our best and ends with as professional as possible. we do provide advanced
+                    technologies.</p>
             </div>
         </div>
     </div>
@@ -110,7 +139,7 @@
                                     <li class="list-group-item bg-none">Lighting Design and Fixture Selection</li>
                                     <li class="list-group-item bg-none">Color Consultation</li>
                                     <li class="list-group-item bg-none">Styling and Décor</li>
-                                  </ul>
+                                </ul>
                             </div>
                             <div class="abt-icon">
                                 <h4>Process</h4>
@@ -120,7 +149,7 @@
                                     <li class="list-group-item bg-none">Final Design</li>
                                     <li class="list-group-item bg-none">Purchasing & Installation</li>
                                     <li class="list-group-item bg-none">Final Delivery</li>
-                                  </ul>
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -164,10 +193,17 @@
                 <div class="carousel-item active">
                     <div class="row row-cols-1 row-cols-md-2">
                         <div class="client-info col mb-4">
-                            <p>View Home Interiors is a class apart when it comes to interior design. Their team's expertise and creativity transformed our house into a stylish and functional home. The attention to detail and personalized approach made us feel valued as clients. They are worth every penny!</p>
+                            <p>View Home Interiors is a class apart when it comes to interior design. Their team's
+                                expertise and creativity transformed our house into a stylish and functional home. The
+                                attention to detail and personalized approach made us feel valued as clients. They are
+                                worth every penny!</p>
                         </div>
                         <div class="client-info col mb-4">
-                            <p>I recently hired view home interiors for a renovation project And I couldn't be happier with the results they transformed my outdated space into modern and stylish from redesigning the layout to selecting the perfect finishes,their attention and craftsmanship were exceptional and the team ensured that the project was completed on time within budget u must go for them services are on top class</p>
+                            <p>I recently hired view home interiors for a renovation project And I couldn't be happier
+                                with the results they transformed my outdated space into modern and stylish from
+                                redesigning the layout to selecting the perfect finishes,their attention and
+                                craftsmanship were exceptional and the team ensured that the project was completed on
+                                time within budget u must go for them services are on top class</p>
                         </div>
                     </div>
                 </div>
@@ -175,10 +211,16 @@
                 <div class="carousel-item">
                     <div class="row row-cols-2">
                         <div class="client-info col">
-                            <p>View Home Interiors truly understands the art of interior design. From the initial consultation to the final touches, they were professional, reliable, and efficient. The end result was a beautifully designed space that perfectly reflects our style. Thank you for your outstanding work!.</p>
+                            <p>View Home Interiors truly understands the art of interior design. From the initial
+                                consultation to the final touches, they were professional, reliable, and efficient. The
+                                end result was a beautifully designed space that perfectly reflects our style. Thank you
+                                for your outstanding work!.</p>
                         </div>
                         <div class="client-info col">
-                            <p>I couldn't be happier with the exceptional work done by View Home Interiors. They listened attentively to my ideas and turned them into a reality beyond my imagination. Their dedication to delivering on time and within budget while maintaining top-notch quality is commendable. I highly recommend their services!.</p>
+                            <p>I couldn't be happier with the exceptional work done by View Home Interiors. They
+                                listened attentively to my ideas and turned them into a reality beyond my imagination.
+                                Their dedication to delivering on time and within budget while maintaining top-notch
+                                quality is commendable. I highly recommend their services!.</p>
                         </div>
                     </div>
 
@@ -205,27 +247,10 @@
                 <p><a class="no-text" href="mailto:viewhomeinteriors@gmail.com">viewhomeinteriors@gmail.com</a></p>
             </div>
         </div>
-        <div class="email-div">
-            <h4 class="capitalise pb-4">Send us a message now</h4>
-            <form>
-                <div class="mb-3">
-                    <label for="exampleFormControlTextarea1" class="form-label">Your Name</label>
-                    <input class="form-control" type="text">
-                </div>
-                <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Your Email</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                </div>
-                <div class="mb-3">
-                    <label for="exampleFormControlTextarea1" class="form-label">Your Message</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
-        </div>
         <div style="width: 100%"><iframe width="100%" height="600" frameborder="0" scrolling="no" marginheight="0"
                 marginwidth="0"
-                src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=View%20Home%20Interiors,%2012-1-508/B/68,%20Street%20No%202,%20Siripuri%20Colony%20Rd,%20Lalapet,%20Secunderabad,%20Telangana%20500047+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.maps.ie/distance-area-calculator.html"></iframe>
+                src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=View%20Home%20Interiors,%2012-1-508/B/68,%20Street%20No%202,%20Siripuri%20Colony%20Rd,%20Lalapet,%20Secunderabad,%20Telangana%20500047+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a
+                    href="https://www.maps.ie/distance-area-calculator.html"></iframe>
         </div>
     </div>
 
@@ -237,7 +262,8 @@
                 <div>Siripuri Colony Rd,</div>
                 <div>Tarnaka, Secunderabad, 500047.</div>
                 <div><a class="no-text" href="tel:+919550402712">Telephone : +91 9550402712</a></div>
-                <p><a class="no-text" href="mailto:viewhomeinteriors@gmail.com">Email : viewhomeinteriors@gmail.com</a></p>
+                <p><a class="no-text" href="mailto:viewhomeinteriors@gmail.com">Email : viewhomeinteriors@gmail.com</a>
+                </p>
             </div>
             <div class="col mb-4 border-r">
                 <h5>QUICK LINKS</h5>
@@ -268,15 +294,16 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous">
-        </script>
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous">
-        </script>
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"
         integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous">
-        </script>
-        <script src="https://kit.fontawesome.com/c9d52e2cdd.js" crossorigin="anonymous"></script>
+    </script>
+    <script src="https://kit.fontawesome.com/61e33f66b4.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
 </body>
 
 </html>
