--- a/index.html
+++ b/index.html
@@ -187,18 +187,18 @@
     </div>
 
     <div class="clients-div" id="clients">
-        <h2 class="capitalise center mb-5">what our clients say</h2>
+        <h2 class="capitalise center mb-5" style="color: #FBDDD5;">what our clients say</h2>
         <div id="carouselExample" class="carousel slide" data-bs-ride="carousel" data-bs-interval="5000">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <div class="row row-cols-1 row-cols-md-2">
-                        <div class="client-info col mb-4">
+                        <div class="client-info col">
                             <p>View Home Interiors is a class apart when it comes to interior design. Their team's
                                 expertise and creativity transformed our house into a stylish and functional home. The
                                 attention to detail and personalized approach made us feel valued as clients. They are
                                 worth every penny!</p>
                         </div>
-                        <div class="client-info col mb-4">
+                        <div class="client-info col">
                             <p>I recently hired view home interiors for a renovation project And I couldn't be happier
                                 with the results they transformed my outdated space into modern and stylish from
                                 redesigning the layout to selecting the perfect finishes,their attention and
