--- a/index.html
+++ b/index.html
@@ -56,18 +56,20 @@
         </div>
     </nav>
 
-    <i onclick="openForm()" onmouseover="addEffect(this)" onmouseout="removeEffect(this)" class="fa-brands fa-facebook-messenger open-button"></i>
+    <i onclick="openForm()" onmouseover="addEffect(this)" onmouseout="removeEffect(this)"
+        class="fa-brands fa-facebook-messenger open-button"></i>
     <div class="email-div" id="message-div">
         <button onclick="closeForm()" type="button" class="btn-close" aria-label="Close"></button>
-        <h4 class="pb-4">Send us a message now</h4>
         <form id="message-form">
+            <h4 class="pb-4">Send us a message now</h4>
             <div class="mb-3">
                 <label for="exampleFormControlTextarea1" class="form-label">Your Name</label>
                 <input class="form-control" name="name" type="text">
             </div>
             <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label">Your Email</label>
-                <input type="email" class="form-control" name="email" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <input type="email" class="form-control" name="email" id="exampleInputEmail1"
+                    aria-describedby="emailHelp">
             </div>
             <div class="mb-3">
                 <label for="exampleFormControlTextarea1" class="form-label">Your Message</label>
@@ -76,6 +78,17 @@
             <button type="submit" onclick="sendEmail(event)" class="btn btn-primary">Submit</button>
         </form>
     </div>
+    <div class="toast-container position-fixed bottom-0 end-0 p-3">
+        <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+          <div class="toast-header">
+            <div class="me-auto"></div>
+            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+          </div>
+          <div class="toast-body">
+            Message sent successfully. Our team will get in touch with you.
+          </div>
+        </div>
+      </div>
 
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" data-bs-interval="5000">
 
